working as Flask app

--- a/templates/staticmeta.html
+++ b/templates/staticmeta.html
@@ -20,7 +20,7 @@
 		<title>{{ metadata['title'] }}</title>
 	</head>
 	<body>
-        <h1>{{ metadata['title'] }}</h1>
+        <h1>eCat Item: {{ metadata['title'] }}</h1>
         <table>
             <tr><th>Metadata Element</th><th>Value</th></tr>
             <tr><td>dcterms.description</td><td>{{ metadata['description'] }}</td></tr>
