--- a/view/templates/alternates.html
+++ b/view/templates/alternates.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Alternates view for Dataset {{ eCatId }}</title>
-</head>
-<body>
-    <h1>Alternates view for Dataset {{ eCatId }}</h1>
-    <table>
-        <tr>
-            <th>View</th>
-            <th>Formats</th>
-        </tr>
-        <tr>
-            <td>default</td>
-            <td>ISO19115</td>
-        </tr>
-        <tr>
-            <td><a href="?_view=ISO19115">ISO19115</a></td>
-            <td><a href="?_view=ISO19115&_format=text/html">HTML</a>, <a href="?_view=ISO19115&_format=text/xml">XML</a></td>
-        </tr>
-        <tr>
-            <td><a href="?_view=staticmeta">StaticMeta</a></td>
-            <td><a href="?_view=staticmeta&_format=text/html">HTML</a></td>
-        </tr>
-        <tr>
-            <td><a href="?_view=agls">AGLS</a></td>
-            <td><a href="?_view=agls&_format=text/xml">XML</a></td>
-        </tr>
+{% extends "template_layout.html" %}
+
+{% block content %}
+    <h1>Alternates view</h1>
+    <h2>Alternates view of a <a href="{{ class_uri_encoded }}">{{ class_uri }}</a></h2>
+    {% if instance_uri %}
+        <h3>Instance <a href="{{ instance_uri_encoded }}">{{ instance_uri }}</a></h3>
+    {% endif %}
+    <p>Default view: <a href="{{ request.base_url }}?_view={{ views_formats['default'] }}">{{ views_formats['default'] }}</a></p>
+    <table class="lined">
+    {% for v, vals in views_formats.items() %}
+        {% if v != 'default' %}
+            <tr>
+                <td><a href="{{ request.base_url }}?_view={{ v }}">{{ v }}</a></td>
+                <td>
+                {% for f in vals['mimetypes'] %}
+                    <a href="{{ request.base_url }}?_view={{ v }}&_format={{ f }}">{{ f }}</a><br />
+                {% endfor %}
+                </td>
+                <td>{{ vals['namespace'] }}</td>
+                <td>{{ vals['description'] }}</td>
+            </tr>
+        {% endif %}
+    {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
