--- a/view/templates/class_metatag.html
+++ b/view/templates/class_metatag.html
@@ -6,7 +6,7 @@
 
 		<meta name="dc.language" content="en-au" />
 		<meta name="dc.format" content="text/html" />
-        <meta name="dc.identifier" content="{{ identifier }}" />
+        <meta name="dc.identifier" content="{{ uri }}" />
         <meta name="dcterms.title" content="{{ title }}" />
 		<meta name="dcterms.description" content="{{ description }}" />
         <meta name="dcterms.creator" content="{{ creator }}" />
@@ -24,7 +24,7 @@
         <table>
             <tr><th>Metadata Element</th><th>Value</th></tr>
             <tr><td>dcterms.description</td><td>{{ description }}</td></tr>
-            <tr><td>dc.identifier</td><td><a href="{{ identifier }}">{{ identifier }}</a></td></tr>
+            <tr><td>dc.identifier</td><td><a href="{{ uri }}">{{ uri }}</a></td></tr>
             <tr><td>dcterms.creator</td><td>{{ creator }}</td></tr>
             <tr><td>dcterms.publisher</td><td>{{ publisher }}</td></tr>
             <tr><td>dcterms.created</td><td>{{ created }}</td></tr>
