first public version

--- a/view/templates/page_index.html
+++ b/view/templates/page_index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Dataset Register</h1>
     <h2>Linked Data API</h2>
-    <p>This Linked Data API presents multiple model views and formats for Geoscience Australia's datasets as managed within our eCat Catalogu. Thi system is currently in <span style="font-weight:bold; font-style:italic; color:red;">test</span>.</p>
+    <p>This Linked Data API presents multiple model views and formats for Geoscience Australia's datasets as managed within our eCat Catalogue. This system is currently in <span style="font-weight:bold; font-style:italic; color:red;">test</span> and most of the views below are incomplete.</p>
     <p>For the authoritative listing of GA's datasets and publications, please see eCat:</p>
     <ul>
         <li><a href="https://ecat.ga.gov.au/geonetwork/">eCat Catalogue</a></li>
