--- a/view/templates/ga_nav.html
+++ b/view/templates/ga_nav.html
@@ -2,4 +2,7 @@
 	<a href="http://www.ga.gov.au">GA Home</a>
 	<a href="{{ url_for('pages.index') }}">Datasets LDAPI API Home</a>
 	<a href="{{ url_for('classes.datasets') }}">Datasets Register</a>
+    <a href="{{ url_for('pages.api') }}">API</a>
+    <a href="{{ url_for('pages.documentation') }}">Documentation</a>
+    <a href="{{ url_for('pages.about') }}">About</a>
 </div>
