--- a/view/templates/class_agls.xml
+++ b/view/templates/class_agls.xml
@@ -7,13 +7,18 @@
 
     <dcterms:title xml:lang="en-AU">{{ title }}</dcterms:title>
     <dcterms:modified xsi:type="xsd:dateTime">{{ modified }}</dcterms:modified>
+    {% for creator in creators %}
     <dcterms:creator xsi:type="aglsterms:AglsAgent">{{ creator }}</dcterms:creator>
+    {% endfor %}
     <dcterms:publisher xsi:type="aglsterms:AglsAgent">{{ publisher }}</dcterms:publisher>
+    {% for subject in subjects %}
     <dcterms:subject>{{ subject }}</dcterms:subject>
+    {% endfor %}
     <dcterms:description xml:lang="en-AU">{{ description }}</dcterms:description>
     <aglsterms:category>{{ category }}</aglsterms:category>
-    <aglsterms:serviceType xsi:type="aglsterms:agls-service">{{ serviceType }}</aglsterms:serviceType>
     <aglsterms:function xsi:type="aglsterms:AGIFT">{{ function }}</aglsterms:function>
-    <dcterms:audience>{{ audience }}</dcterms:audience>
+    <dcterms:audience xsi:type="aglsterms:agls-audience">{{ audience }}</dcterms:audience>
     <aglsterms:availability xsi:type="aglsterms:AglsAvail">{{ availability }}</aglsterms:availability>
+    <dcterms:coverage xsi:type="aglsterms:AglsJuri">{{ jurisdiction }}</dcterms:coverage>
+    <dcterms:source>{{ source }}</dcterms:source>
 </metadata>
