concistent template file naming

--- a/view/templates/class_dct.html
+++ b/view/templates/class_dct.html
@@ -1,4 +1,4 @@
-{% extends "template_layout.html" %}
+{% extends "page_layout.html" %}
 
 {% block content %}
     <h1>Dublin Core Terms view of Dataset {{ ecat_id }}</h1>
