--- a/view/templates/alternates.html
+++ b/view/templates/alternates.html
@@ -1,4 +1,4 @@
-{% extends "template_layout.html" %}
+{% extends "page_layout.html" %}
 
 {% block content %}
     <h1>Alternates view</h1>
@@ -17,7 +17,7 @@
                     <a href="{{ request.base_url }}?_view={{ v }}&_format={{ f }}">{{ f }}</a><br />
                 {% endfor %}
                 </td>
-                <td>{{ vals['namespace'] }}</td>
+                <td><a href="{{ vals['namespace'] }}">{{ vals['namespace'] }}</a></td>
                 <td>{{ vals['description'] }}</td>
             </tr>
         {% endif %}
