--- a/view/templates/page_api.html
+++ b/view/templates/page_api.html
@@ -1,4 +1,4 @@
-{% extends "template_layout.html" %}
+{% extends "page_layout.html" %}
 
 {% block content %}
     <h1>Dataset Register Linked Data API</h1>
