--- a/view/static/css/ga_theme.css
+++ b/view/static/css/ga_theme.css
@@ -2,6 +2,8 @@ body {
 	margin: 0 auto;
 	text-align: center;
 	background-color: white;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight:normal;
 }
 
 #container-content {
@@ -31,18 +33,14 @@ h2, h3 {
 	font-weight:normal;
 }
 
-h4, p, li {
-	font-family:Arial,sans-serif;
-	font-weight:normal;
-}
-
 p, li {
 	color: #000000;
 	line-height: 1.5em;
 	padding: 0.2em 0 0.9em
 }
 
-a {
+p a,
+ul li a {
 	color: #0f4a84;
 }
 
@@ -88,28 +86,46 @@ td#quote {
 /*
 *	Footer
 */
+
 #footer-container {
+    font-size: 0.7em;
+    color: white;
 	text-align: center;
 	background-color: #333;
-	height:40px;
 	padding:25px 0 0 0;
 }
 #footer-links {
+    text-align: left;
 	margin:0 auto;
-	color: white;
-	font-family: sans-serif;
-	font-size: 0.8em;
 	width:900px;
 }
 
 #footer-links a {
-	color: white;
+    color: white;
 	text-decoration:none;
-	margin:0 5px 0 5px;
+	margin:0 20px 0px 0px;
 }
 
 #footer-links a:hover {
-	text-decoration:underline;
+	/*text-decoration:underline;*/
+}
+
+#contact-us {
+    background: #006983 url("/static/img/right-arrow.png") no-repeat 90% 50%;
+    padding: 7px;
+    text-decoration:none;
+}
+
+#contact-us:hover {
+    background-color: #A33F1F;
+}
+
+#footer-text {
+    color: white;
+    margin:0 auto;
+    margin-top: 10px;
+    text-align: left;
+    width: 900px;
 }
 
 /*
@@ -141,4 +157,32 @@ table.lined th,
 table.lined td {
     border: solid 1px black;
     padding: 5px;
+}
+
+table.pretty {
+    border-collapse: collapse;
+    /*border: solid 2px black;*/
+	width: 568px;
+    font-size: 0.8em;
+}
+
+table.pretty tr:nth-child(even) {
+    background: #efefef;
+    border-top: 1px solid #D8D8D8;
+}
+table.pretty tr:nth-child(odd) {
+    background: #ffffff;
+    border-top: 1px solid #D8D8D8;
+}
+
+table.pretty th,
+table.pretty td {
+    /*border: solid 1px black;*/
+    padding: 5px;
+}
+
+table.pretty th {
+    color: white;
+    font-weight: bold;
+    background-color: #006983;
 }
