--- a/view/templates/alternates.html
+++ b/view/templates/alternates.html
@@ -7,7 +7,13 @@
         <h3>Instance <a href="{{ instance_uri_encoded }}">{{ instance_uri }}</a></h3>
     {% endif %}
     <p>Default view: <a href="{{ request.base_url }}?_view={{ views_formats['default'] }}">{{ views_formats['default'] }}</a></p>
-    <table class="lined">
+    <table class="pretty">
+        <tr>
+            <th>View</th>
+            <th>Formats</th>
+            <th>Namespace</th>
+            <th>Description</th>
+        </tr>
     {% for v, vals in views_formats.items() %}
         {% if v != 'default' %}
             <tr>
