--- a/view/templates/ga_nav.html
+++ b/view/templates/ga_nav.html
@@ -1,6 +1,6 @@
 <div id="ga-nav">
 	<a href="http://www.ga.gov.au">GA Home</a>
-	<a href="{{ url_for('pages.index') }}">Datasets LDAPI API Home</a>
+	<a href="{{ url_for('pages.index') }}">Datasets LDAPI Home</a>
 	<a href="{{ url_for('classes.datasets') }}">Datasets Register</a>
     <a href="{{ url_for('pages.api') }}">API</a>
     <a href="{{ url_for('pages.documentation') }}">Documentation</a>
